# aisaac

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  WANTED.md  pyproject.toml  test_smoke.py
aisaac/: __init__.py  demo.py
aisaac/breakthrough/: __init__.py  augmenter.py  dataset.py  detector.py  matcher.py  report.py  symptoms.py
aisaac/comparison/: citation_novelty.py  engine.py  numerical_table.py  symmetry.py
aisaac/conjecture/: generator.py  investigator.py
aisaac/ingestion/: citation_graph.py  crawler.py  deduplicator.py  extractor.py  latex_parser.py  structured_extractor.py
aisaac/knowledge/: base.py  known_connections.py  normalizer.py
aisaac/ml/: patterns.py  semantic.py
aisaac/output/: paper_writer.py  visualizations.py
aisaac/pipeline/: aisaac.py  config.py  llm_client.py  state.py
aisaac/premise/: __init__.py  assumption_extractor.py  contradiction_finder.py  convergence_analyzer.py  equation_interrogator.py  obstacle_cataloger.py  premise_ranker.py  reframer.py  report_generator.py  shared_failure_analyzer.py  symbolic_regression.py
aisaac/verification/: engine.py  semantic_scholar.py
analysis/: verified_pysr.py
docs/: verified_predictions.json
docs/open-questions/: 2026-03-21-causal-sets-emergent-gravity-spectral-dimension.md
docs/results/: 2026-03-21-quantum-gravity-tier1.md  2026-03-22-quantum-gravity-tier1-v2.md  2026-03-23-premise-discovery.md  2026-03-24-pysr-results.json  2026-03-24-pysr-spectral-dimension.md
examples/domains/: condensed_matter.py  quantum_gravity.py  turbulence.py
